debug.txt
[Running] cd "c:\Users\heuser\Desktop\gitTest\cppProject\" && g++ cppCombine.cpp -o cppCombine && "c:\Users\heuser\Desktop\gitTest\cppProject\"cppCombine
cppCombine.cpp: In function 'void sector_polygon_and_lut_update(int, int, int, int, int, int)':
cppCombine.cpp:185:60: error: too few arguments to function 'void smooth_deform(double, double, double, double, double, double, double, double, double, double&, double&, double&)'
         smooth_deform(hh, ss, vv, h1, s1, v1, hh2, ss2, vv2);
                                                            ^
cppCombine.cpp:109:6: note: declared here
 void smooth_deform(const double h0, const double s0, const double v0,
      ^~~~~~~~~~~~~
cppCombine.cpp: In function 'void sleep_millisec(int)':
cppCombine.cpp:212:10: error: 'std::this_thread' has not been declared
     std::this_thread::sleep_for(std::chrono::milliseconds(ms));
          ^~~~~~~~~~~
cppCombine.cpp: In function 'int main()':
cppCombine.cpp:421:29: error: 'usleep' was not declared in this scope
         usleep( 4000 * 1000 );
                             ^